# limelight-x

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Public_Release_Checklist.md  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  dsl-proposal.md  feature_request.md
.github/workflows/: ui-ci.yml  ui-release.yml
examples/: example-tests.md  example-trace.md  meeting.txt  summarize-for-slack.llx  summarize-to-json.llx  summarize-to-spanish.llx
scripts/: build-manual-testing.ps1
spec/: api.md  architecture.md  ast-normalizer.md  bdd-api.md  bdd.md  cnl-editor-architecture.md  cnl-grammar.md  coding-standards.md  evaluator-semantics.md  ir.md  model-adapter.md  spec-template.md
spec/parsing/: folds-scm.md  grammer-js.md  highlights-scm.md  injections-scm.md  peg-grammar.md  tree-sitter-build-guide.md  tree-sitter-integration.md  tree-sitter-runtime-build-guide.md
spec/ux/: bdd-ui-error-cases.md  bdd-ui-interactions.md  bdd-ui-navigation.md  ui-accessibility.md  (+16 more)
src/: error.rs  lib.rs
tests/: api_errors.rs  api_explain.rs  api_lifecycle.rs  api_run.rs  api_streaming.rs  api_trace.rs
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  folds.scm  go.mod  grammar.js  highlights.scm  injections.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
ui/: App.axaml  App.axaml.cs  LimelightX.UI.csproj  LimelightX.slnx  Program.cs  app.manifest  packages.lock.json
(+320 files in other folders)
