[package]
name = "limelight-x"
version = "0.1.0"
edition = "2021"

[lib]
name = "limelight_x"
path = "src/lib.rs"

[[bin]]
name = "llx"
path = "src/cli/main.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
